# llvmenv

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  llvmenv.zsh  sample.toml
.circleci/: config.yml
.github/workflows/: build_llvm.yml  rust.yml
src/: build.rs  config.rs  entry.rs  error.rs  getter.rs  lib.rs  llvm-mirror.toml  llvm-project.toml  main.rs  resource.rs
