[package]
name = "llvmenv"
version = "0.3.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "Manage LLVM/Clang builds"
documentation = "https://docs.rs/llvmenv"
repository    = "https://github.com/termoshtt/llvmenv"
keywords      = ["env", "llvm", "clang"]
license       = "MIT"
readme        = "README.md"
categories    = []

edition = '2018'

[dependencies]
dirs = "2.0"
fs_extra = "1.1"
glob = "0.3"
itertools = "0.9"
log = "0.4"
num_cpus = "1"
regex = "1"
reqwest = { version = "0.10.4", features = ["blocking"]}
serde = "1"
serde_derive = "1"
shellexpand = "2"
simplelog = "0.7"
structopt = "0.3"
tar = "*"
tempfile= "3"
thiserror = "1.0"
toml = "0.5"
url = "2"
which = { version = "3", default-features = false }
xz2 = "*"

[dev-dependencies]
paste = "0.1"
