[package]
name = "llvmenv"
version = "0.3.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description   = "Manage LLVM/Clang builds"
documentation = "https://docs.rs/llvmenv"
repository    = "https://github.com/termoshtt/llvmenv"
keywords      = ["env", "llvm", "clang"]
license       = "MIT"
readme        = "README.md"
categories    = []

edition = '2018'

[dependencies]
dirs = "2.0.2"
fs_extra = "1.1.0"
glob = "0.3.0"
itertools = "0.9.0"
log = "0.4.8"
num_cpus = "1.13.0"
regex = "1.3.7"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = "1.0.110"
serde_derive = "1.0.110"
shellexpand = "2.0.0"
simplelog = "0.7.6"
structopt = "0.3.14"
tar = "0.4.26"
tempfile= "3.1.0"
thiserror = "1.0.16"
toml = "0.5.6"
url = "2.1.1"
which = { version = "4.0.1", default-features = false }
xz2 = "0.1.6"

[dev-dependencies]
paste = "0.1.12"
